// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test GifExpertApp  should matcth snapshoot 1`] = `
<Fragment>
  <h2>
     GifExpert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Test GifExpertApp  should show a list of categories 1`] = `
<Fragment>
  <h2>
     GifExpert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifList
      category="vegeta"
      key="vegeta"
    />
    <GifList
      category="goku"
      key="goku"
    />
  </ol>
</Fragment>
`;
